# FFmpegPrj

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  FFmpegWin.sln  FFmpegWin.vcxproj  FFmpegWin.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
FFmpegWin.dir/Debug/FFmpegWin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: AVBase.h  AVDataPool.h  FrameQueue.h  TestThread.h  VideoPlayerWin.h  WriteYuv.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: AVBase.cpp  FFmpegWin.cpp  FrameQueue.cpp  TestThread.cpp  VideoPlayerWin.cpp  WriteYuv.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
